Fixing spacing

--- a/styles/myStyles.css
+++ b/styles/myStyles.css
@@ -238,6 +238,18 @@ hr {
 	text-align: center;
 }
 
+#banner2 {
+	//width: 100%;
+	//height: 100%;
+	background-image: url('../images/banner2.jpg');
+	background-repeat: no-repeat;
+	//background-position: top center;
+	background-size: cover;
+	//-webkit-background-size: cover;
+	//-moz-background-size: cover;
+	//-o-background-size: cover;
+}
+
 .down-text {
 	position: absolute;
 	bottom: 150px;
